--- a/templates/print_students.html
+++ b/templates/print_students.html
@@ -46,15 +46,19 @@
     <table>
         <thead>
             <tr>
+                <th>Roll Number</th>
                 <th>Name</th>
                 <th>College</th>
+                <th>Attendence</th>
             </tr>
         </thead>
         <tbody>
             {% for student in students %}
                 <tr>
+                    <td>{{ student.roll_no }}</td>
                     <td>{{ student.name }}</td>
                     <td>{{ student.college_name }}</td>
+                    <td>{{ student.attendence }}</td>
                 </tr>
             {% endfor %}
         </tbody>
