Integrating college and admin

--- a/templates/print_students.html
+++ b/templates/print_students.html
@@ -57,7 +57,7 @@
                 <tr>
                     <td>{{ student.roll_no }}</td>
                     <td>{{ student.name }}</td>
-                    <td>{{ student.college_name }}</td>
+                    <td>{{ student.college }}</td>
                     <td>{{ student.attendence }}</td>
                 </tr>
             {% endfor %}
