--- a/templates/admin_user_form.html
+++ b/templates/admin_user_form.html
@@ -18,6 +18,10 @@
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
         <div class="mb-3">
+            <label for="phone" class="form-label">Phone</label>
+            <input type="number" class="form-control" id="phone" name="phone" required>
+        </div>
+        <div class="mb-3">
             <label for="college" class="form-label">College</label>
             <select class="form-control" id="college" name="college">
                 {% for college in colleges %}
